# sc_gazebo_test

./: README.md
sc_control/: CMakeLists.txt  package.xml
sc_control/config/: sc_control.yaml
sc_control/launch/: sc_control.launch  sc_rqt.launch  sc_rqt.perspective
sc_description/: CMakeLists.txt  package.xml
sc_description/launch/: sc_rviz.launch
sc_description/meshes/: SC_link1.stl  SC_link2.stl
sc_description/rviz/: sc.rviz
sc_description/urdf/: model.config  sc.gazebo  sc.sdf  sc.transmission  sc.urdf  sc.xacro
sc_gazebo/: CMakeLists.txt  package.xml
sc_gazebo/launch/: sc_world.launch  sc_world_sdf.launch
sc_gazebo/worlds/: sc.world
