<package>
  <name>sc_gazebo</name>
  <version>0.1.0</version>
  <description>sc_gazebo</description>
  <maintainer email="jae-beom@kakao.com"></maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>sc_control</run_depend>
  <run_depend>sc_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
